@@ -16,27 +16,48 @@
  */
 package org.microbean.element;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 import javax.lang.model.element.AnnotationMirror;
 
+import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.IntersectionType;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.type.TypeVisitor;
 
-public final class DefaultIntersectionType extends AbstractTypeMirror implements IntersectionType {
+public class DefaultIntersectionType extends AbstractTypeMirror implements IntersectionType {
 
   private final List<? extends TypeMirror> bounds;
   
-  private DefaultIntersectionType(final List<? extends TypeMirror> bounds) {
+  protected DefaultIntersectionType(final List<? extends TypeMirror> bounds) {
     super(TypeKind.INTERSECTION, List.of());
-    this.bounds = bounds == null || bounds.isEmpty() ? List.of() : List.copyOf(bounds);
+    if (bounds.isEmpty()) {
+      // (Technically I think we could use Object...)
+      throw new IllegalArgumentException("bounds.isEmpty()");
+    }    
+    final TypeMirror firstBound = bounds.get(0);
+    switch (firstBound.getKind()) {
+    case DECLARED:
+      if (((DeclaredType)firstBound).asElement().getKind().isInterface()) {
+        final List<TypeMirror> newBounds = new ArrayList<>(bounds.size() + 1);
+        newBounds.add(0, DefaultDeclaredType.JAVA_LANG_OBJECT);
+        newBounds.addAll(bounds);
+        this.bounds = Collections.unmodifiableList(newBounds);
+      } else {
+        this.bounds = List.copyOf(bounds);
+      }
+      break;
+    default:
+      this.bounds = List.copyOf(bounds);
+    }
   }
 
   @Override // TypeMirror
-  public final <R, P> R accept(final TypeVisitor<R, P> v, P p) {
+  public <R, P> R accept(final TypeVisitor<R, P> v, P p) {
     return v.visitIntersection(this, p);
   }
   
@@ -45,7 +66,7 @@ public final class DefaultIntersectionType extends AbstractTypeMirror implements
     return this.bounds;
   }
 
-  public static final DefaultIntersectionType of(final List<? extends TypeMirror> bounds) {
+  public static DefaultIntersectionType of(final List<? extends TypeMirror> bounds) {
     return new DefaultIntersectionType(bounds);
   }
   
